--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,7 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="search_fail">搜索失败</string>
+    <string name="push_msg_clear_fail">清空消息失败</string>
+    <string name="push_msg_get_fail">获得消息失败</string>
+
 </resources>
