--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,4 +2,21 @@
 <resources>
     <string name="app_name">微博</string>
     <string name="app_exit_warning">再按一次退出应用</string>
+    <string name="action_comment">评论</string>
+    <string name="loadend">THE END</string>
+    <string name="loading">加载中…</string>
+    <string name="loadfail">加载失败，点我再试试？</string>
+    <string name="list_loading">加载数据中</string>
+    <string name="go">登录</string>
+    <string name="Username">用户名</string>
+    <string name="Password">密码</string>
+    <string name="login">登录</string>
+    <string name="login_success">登录成功</string>
+    <string name="repeat_password">重复密码</string>
+    <string name="register">注册</string>
+    <string name="next">下一步</string>
+    <string name="error_invalid_password">密码不符合格式</string>
+    <string name="error_field_required">必须填写</string>
+    <string name="nickname">昵称</string>
+    <string name="error_not_match_password">密码不一致</string>
 </resources>
