Upgrade new Activity about Settings, but it is the primary function

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -19,4 +19,5 @@
     <string name="error_field_required">必须填写</string>
     <string name="nickname">昵称</string>
     <string name="error_not_match_password">密码不一致</string>
+    <string name="title_activity_setting">设置</string>
 </resources>
