--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -20,4 +20,19 @@
     <string name="nickname">昵称</string>
     <string name="error_not_match_password">密码不一致</string>
     <string name="title_activity_setting">设置</string>
+    <string name="title_item_notifications">开启通知提醒</string>
+    <string name="title_item_donotdisturb_mode">开启免打扰模式</string>
+    <string name="title_item_donotdisturb_mode_content">凌晨1点-8点不会开启通知提醒</string>
+    <string name="title_item_regular_settings">常规设置</string>
+    <string name="title_item_notification_interval">设置通知时间间隔</string>
+
+
+    <string-array name="dialog_content_item_notification_interval">
+        <item>2分钟</item>
+        <item>5分钟</item>
+        <item>10分钟</item>
+        <item>15分钟</item>
+        <item>30分钟</item>
+        <item>1小时</item>
+    </string-array>
 </resources>
