--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,28 +76,24 @@
         <item>-1</item>
     </string-array>
 
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
+    <string-array name="dialog_content_item_notification_interval">
+        <item>2 minutes</item>
+        <item>5 minutes</item>
+        <item>10 minutes</item>
         <item>15 minutes</item>
         <item>30 minutes</item>
         <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
     </string-array>
-    <string-array name="pref_sync_frequency_values">
+    <integer-array name="dialog_content_item_notification_interval_values">
+        <item>2</item>
+        <item>5</item>
+        <item>10</item>
         <item>15</item>
         <item>30</item>
         <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
+    </integer-array>
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
 
     <!-- Example settings for Notifications -->
     <string name="pref_header_notifications">Notifications</string>
@@ -124,4 +120,9 @@
     <string name="tr_fab_name">loginFab</string>
     <string name="nickname">nickname</string>
     <string name="title_activity_setting">Setting</string>
+    <string name="title_item_notifications">Notifications</string>
+    <string name="title_item_donotdisturb_mode">Do-not-disturb mode</string>
+    <string name="title_item_donotdisturb_mode_content">Do not notify me between 1AM-8AM</string>
+    <string name="title_item_regular_settings">Regular settings</string>
+    <string name="title_item_notification_interval">Notification interval</string>
 </resources>
