--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,6 @@
     <string name="content_old_password">Old password</string>
     <string name="content_new_password">New password</string>
     <string name="content_confirm_password">Confirm password</string>
+    <string name="content_location_positioning">Positioning</string>
+    <string name="content_location_fail">Position fail</string>
 </resources>
