--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,8 +98,6 @@
     </integer-array>
 
 
-
-
     <!-- Example settings for Notifications -->
     <string name="pref_header_notifications">Notifications</string>
 
@@ -131,7 +129,7 @@
     <string name="title_item_regular_settings">Regular settings</string>
     <string name="title_item_notification_interval">Notification interval</string>
     <string name="content_minute">minutes</string>
-    <strinchangeg name="title_item_user_settings">User</strinchangeg>
+    <string name="title_item_user_settings">User</string>
     <string name="title_item_nickname">nick name</string>
     <string name="title_item_truename">real name</string>
     <string name="title_item_sex">gender</string>
@@ -148,4 +146,9 @@
     <string name="dialog_content_name_ourpush">official Push</string>
     <string name="dialog_content_name_jpush">JiGuang Push</string>
     <string name="title_item_notification_mode">Push Service Mode</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_item_about">About</string>
+    <string name="title_item_version">verison</string>
 </resources>
